force-app/main/default/objects/Quiz_User__c/Quiz_User__c.object-meta.xml
<CustomObject>
    <label>Quiz_User</label>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Quiz_User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz_Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>