force-app/main/default/objects/Quiz_User__c/fields/Another_Tab_Open__c.field-meta.xml
<CustomField>
    <fullName>Another_Tab_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for real-time value</description>
    <label>Another Tab Open?</label>
    <type>Checkbox</type>
</CustomField>