force-app/main/default/objects/Quiz_User__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>