force-app/main/default/objects/Quiz_User__c/fields/Quiz_Session__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz_Session</label>
    <referenceTo>Quiz_Session__c</referenceTo>
    <relationshipLabel>Quiz_Users</relationshipLabel>
    <relationshipName>Quiz_Users</relationshipName>
    <type>Lookup</type>
</CustomField>