force-app/main/default/objects/Quiz_User__c/fields/Total_Tab_Switched__c.field-meta.xml
<CustomField>
    <fullName>Total_Tab_Switched__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Tab Switched</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>